/*
 * The MIT License
 *
 * Copyright 2017-2018 Norwegian University of Technology (NTNU)
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING  FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 * THE SOFTWARE.
 */

syntax = "proto3";

package fmuproxy.grpc;

option java_package = "no.mechatronics.sfi.fmuproxy.grpc";
option java_outer_classname = "Proto";

message ModelDescription {
    string fmi_version = 1;
    string guid = 2;
    string model_name = 3;
    string license = 4;
    string copyright = 5;
    string author = 6;
    string version = 7;
    string description = 8;
    string generation_tool = 9;
    string generation_date_and_time = 10;
    DefaultExperiment default_experiment = 11;
    VariableNamingConvention variable_naming_convention = 12;
    repeated ScalarVariable model_variables = 13;
    ModelStructure model_structure = 14;
}

message CoSimulationAttributes {
    string modelIdentifier = 1;
    bool canGetAndSetFMUstate = 2;
    bool canSerializeFMUstate = 3;
    bool providesDirectionalDerivative = 4;
    bool canHandleVariableCommunicationStepSize = 5;
    bool canInterpolateInputs = 6;
    uint32 maxOutputDerivativeOrder = 7;
    
}

message IntegerAttribute {
    int32 min = 1;
    int32 max = 2;
    int32 start = 3;
}

message RealAttribute {
    double min = 1;
    double max = 2;
    double start = 3;
}

message StringAttribute {
    string start = 1;
}

message BooleanAttribute {
    bool start = 1;
}

message EnumerationAttribute {
    int32 min = 1;
    int32 max = 2;
    int32 start = 3;
}

message ScalarVariable {
    uint64 value_reference = 1;
    string name = 2;
    string description = 3;
    Initial initial = 4;
    Causality causality = 5;
    Variability variability = 6;
    oneof attribute {
        IntegerAttribute integer_attribute = 10;
        RealAttribute real_attribute = 11;
        StringAttribute string_attribute = 12;
        BooleanAttribute boolean_attribute = 13;
        EnumerationAttribute enumeration_attribute = 14;
    }
}

message DefaultExperiment {
    double start_time = 1;
    double stop_time = 2;
    double tolerance = 3;
    double step_size = 4;
}

message Unknown {
    uint32 index = 1;
    repeated uint32 dependencies = 2;
    string dependencies_kind = 3;
}

message ModelStructure {
    repeated Unknown outputs = 1;
    repeated Unknown derivatives = 2;
    repeated Unknown initial_unknowns = 3;
}


enum Causality {
    INPUT_CAUSALITY = 0;
    OUTPUT_CAUSALITY = 1;
    PARAMETER_CAUSALITY = 2;
    CALCULATED_PARAMETER_CAUSALITY = 3;
    LOCAL_CAUSALITY = 4;
    INDEPENDENT_CAUSALITY = 5;
}

enum Variability {
    CONSTANT_VARIABILITY = 0;
    FIXED_VARIABILITY = 1;
    CONTINUOUS_VARIABILITY = 2;
    DISCRETE_VARIABILITY = 3;
    TUNABLE_VARIABILITY = 4;
}

enum Initial {
    EXACT_INITIAL = 0;
    APPROX_INITIAL = 1;
    CALCULATED_INITIAL = 2;
}

enum Status {
    OK_STATUS = 0;
    WARNING_STATUS = 1;
    DISCARD_STATUS = 2;
    ERROR_STATUS = 3;
    FATAL_STATUS = 4;
    PENDING_STATUS = 5;
}

enum VariableNamingConvention {
    FLAT = 0;
    STRUCTURED = 1;
}
