/*
 * The MIT License
 *
 * Copyright 2017-2018 Norwegian University of Technology (NTNU)
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING  FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 * THE SOFTWARE.
 */

syntax = "proto3";

package fmuproxy.grpc;

option java_package = "no.mechatronics.sfi.fmuproxy.grpc";

import "definitions.proto";

service FmuService {

    rpc GetModelDescriptionXml(Void) returns (Str);
    rpc GetModelDescription(Void) returns (ModelDescription);

    rpc CreateInstanceFromCS (Void) returns (UInt);
    rpc CreateInstanceFromME (Solver) returns (UInt);

    //instance methods

    rpc GetSimulationTime (UInt) returns (Real);
    rpc IsTerminated (UInt) returns (Bool);

    rpc Init (InitRequest) returns (StatusResponse);
    rpc Step (StepRequest) returns (StepResult);
    rpc Terminate (UInt) returns (StatusResponse);
    rpc Reset(UInt) returns (StatusResponse);

    rpc ReadInteger (ReadRequest) returns (IntegerRead);
    rpc ReadReal (ReadRequest) returns (RealRead);
    rpc ReadString (ReadRequest) returns (StringRead);
    rpc ReadBoolean (ReadRequest) returns (BooleanRead);

    rpc WriteInteger (WriteIntegerRequest) returns (StatusResponse);
    rpc WriteReal (WriteRealRequest) returns (StatusResponse);
    rpc WriteString (WriteStringRequest) returns (StatusResponse);
    rpc WriteBoolean (WriteBooleanRequest) returns (StatusResponse);

}
